--- a/ponder/v3/team04.html
+++ b/ponder/v3/team04.html
@@ -292,7 +292,7 @@ export function renderWithTemplate(templateFn, parentElement, data, callback, po
                       into it?
                     </p>
                     <p>
-                      Think about the <kbd>ProductDetails</kbd> module. When we
+                      Think about the <kbd>productDetails</kbd> module. When we
                       built it we decided to leave most of the HTML in the
                       <kbd>index.html</kbd> file and just insert in the values.
                       What if we wanted to convert it to use a template
@@ -382,9 +382,9 @@ const footerTemplateFn = loadTemplate("/partials/footer.html");</code></pre>
                 of localStorage and then built the HTML to display them. It
                 needs to be updated however to match the rest of the
                 application. We should create a
-                <kbd>ShoppingCart.js</kbd> module similar to what we did for
-                <kbd>ProductList</kbd>. We should also convert it to use a
-                <kbd>template</kbd> like we did for the ProductList as well.
+                <kbd>shoppingCart.mjs</kbd> module similar to what we did for
+                <kbd>productList</kbd>. We should also convert it to use a
+                <kbd>template</kbd> like we did for the productList as well.
               </p>
 
               <!-- END STEP -->
