--- a/ponder/v3/team01.html
+++ b/ponder/v3/team01.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Team</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/prism-coy.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -73,7 +73,9 @@
               <ol>
                 <li>
                   Each member of the team should have already completed the
-                  <a href="../resources/course-setup-v2.html">course setup</a>
+                  <a href="../../resources/course-setup-v2.html"
+                    >course setup</a
+                  >
                   activity. Go and do that now if you have not.
                 </li>
                 <li>
@@ -369,7 +371,7 @@
                   <div class="fig-block">
                     <figure>
                       <img
-                        src="../images/330-merge-confilict.PNG"
+                        src="../../images/330-merge-confilict.PNG"
                         alt="merge error from GitHub"
                       />
                     </figure>
@@ -526,7 +528,7 @@
       <!-- end #article -->
     </div>
 
-    <script src="../js/course.js"></script>
-    <script src="../js/prism.js"></script>
+    <script src="../../js/course.js"></script>
+    <script src="../../js/prism.js"></script>
   </body>
 </html>
